# SysDrill

./: .gitignore  AGENTS.md  FILE_TREE.txt  Makefile  README.md  pyproject.toml
backend/: pyproject.toml
backend/src/sysdrill_backend/: __init__.py  app.py  content_bundle_reader.py  content_catalog_api.py  executable_learning_unit_materializer.py  learner_projection.py  learner_summary.py  recommendation_engine.py  rule_first_evaluator.py  session_runtime.py
backend/tests/: test_app.py  test_content_api.py  test_content_bundle_reader.py  test_executable_learning_unit_materializer.py  test_learner_projection.py  test_learner_summary.py  test_recommendation_engine.py  test_rule_first_evaluator.py  test_session_runtime.py  test_smoke_backend_loop.py
tools/system-design-space-importer/: README.md  pyproject.toml
tools/system-design-space-importer/docs/: architecture.md  cli.md  contracts.md  review-workflow.md  source-policy.md  test-contract.md
tools/system-design-space-importer/examples/: discovery-manifest.example.json  draft-topic-package.example.yaml  parsed-source-fragment.example.yaml  provenance.example.json  semantic-draft.example.yaml  source-document.example.yaml  validation-report.example.yaml
tools/system-design-space-importer/src/system_design_space_importer/: cli.py  discovery.py  extractor.py  fetcher.py  jsonio.py  mapper.py  models.py  packager.py  paths.py  (+4 more)
tools/system-design-space-importer/tests/: test_cli.py  test_discovery.py  test_export.py  test_fetch_policy.py  test_mapper.py  test_robots.py  test_smoke_pipeline.py  test_validator.py
(+134 files in other folders)
